# USS-Endeavour

./: .gitignore  ChangeLog.md  Endeavour.hs  architecture.graphml  endeavour.cabal  package.yaml  stack.yaml
Endeavour/: Memory.hs  Types.hs
Endeavour/Knowledge/LittleBits/: Internal.hs
endeavour/: endeavour.cabal
endeavour-ai/: Endeavour.hs  endeavour-ai.cabal
endeavour-cli/: Endeavour.hs  endeavour-cli.cabal
endeavour-cli/Endeavour/Console/: Events.hs  Types.hs  UI.hs
endeavour-server/: Endeavour.hs  endeavour-server.cabal
endeavour/Endeavour/: Genetics.hs  Memory.hs
endeavour/Endeavour/Knowledge/: ChromeCast.hs  Hue.hs  LittleBits.hs  Space.hs  Util.hs
endeavour/Endeavour/Knowledge/Hue/: Internal.hs
endeavour/Endeavour/Knowledge/LittleBits/: Internal.hs
endeavour/test/: Test.hs
test/: Test.hs
