name:                endeavour-cli
version:             1.0.0
synopsis:            CLI interface for the Endeavour system.
description:         CLI interface for the Endeavour system.
license:             BSD3
author:              Colin Woodbury
maintainer:          colingw@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable endeavour-cli
  main-is:             Endeavour.hs

  other-modules:       Endeavour.Console.UI
                     , Endeavour.Console.Types
                     , Endeavour.Console.Events

  build-depends:       base >=4.9 && <4.10
                     , brick >= 0.15 && < 0.18
                     , containers
                     , deque >= 0.2 && < 0.3
                     , endeavour >= 1.0 && < 1.1
                     , microlens >= 0.4 && < 0.5
                     , microlens-th >= 0.4 && < 0.5
                     , optparse-generic >= 1.1 && < 1.2
                     , text
                     , th-printf >= 0.3 && < 0.4
                     , time
                     , unix
                     , vector >= 0.11 && < 0.13
                     , vty >= 5.15 && < 5.16

  default-language:    Haskell2010

  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -threaded
