name:                endeavour-server
version:             1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Colin Woodbury
maintainer:          colingw@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable endeavour-ai
  main-is:             Endeavour.hs

  build-depends:       base >=4.9 && <4.10
                     , endeavour
                     , optparse-generic >= 1.1 && < 1.2
                     , servant >= 0.9 && < 0.10
                     , servant-server >= 0.9 && < 0.10
                     , transformers >= 0.5 && < 0.6
                     , warp >= 3.2 && < 3.3
                     , unix

  default-language:    Haskell2010
  ghc-options: -fwarn-unused-imports -threaded
