name:                endeavour
version:             1.0.0
synopsis:            The central computing core for the USS Endeavour.
description:         The central computing core for the USS Endeavour.
license:             BSD3
license-file:        LICENSE
author:              Colin Woodbury
maintainer:          colingw@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Endeavour.Memory
                     , Endeavour.Genetics
                     , Endeavour.Knowledge.ChromeCast
                     , Endeavour.Knowledge.Hue
                     , Endeavour.Knowledge.Hue.Internal
                     , Endeavour.Knowledge.LittleBits
                     , Endeavour.Knowledge.LittleBits.Internal
                     , Endeavour.Knowledge.Space
                     , Endeavour.Knowledge.Util

  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , aeson >= 1.0 && < 1.1
                     , async >= 2.1 && < 2.2
                     , containers
                     , freer-effects >= 0.3 && < 0.4
                     , fuzzy >= 0.1 && < 0.2
                     , http-client >= 0.5 && < 0.6
                     , http-client-tls >= 0.3 && < 0.4
                     , microlens >= 0.4 && < 0.5
                     , microlens-th >= 0.4 && < 0.5
                     , microlens-aeson >= 2.1 && < 2.3
                     , servant >= 0.9 && < 0.10
                     , servant-client >= 0.9 && < 0.10
                     , shelly >= 1.6 && < 1.7
                     , sqlite-simple >= 0.4 && < 0.5
                     , text >=1.2 && <1.3
                     , time
                     , yaml >= 0.8 && < 0.9

  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds

test-suite endeavour-test
  type:                exitcode-stdio-1.0

  build-depends:       base >=4.9 && <4.10
                     , containers
                     , endeavour
                     , freer-effects
                     , sqlite-simple
                     , tasty >= 0.10.1.2
                     , tasty-hunit >= 0.9.2
                     , text

  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -threaded